[package]
name = "hls-parser"
version = "0.1.0"
authors = ["John G. Gainfort, Jr. <gainfortj@gmail.com>"]
description = "A fast and lightweight HTTP Live Streaming (HLS) parsing WebAssembly library written in Rust"
license = "MIT"
repository = "https://github.com/jgainfort/hls-parser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.6", features = ['console'] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 's'
